# agent-managed-browser

./: .gitignore  INSTALL.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish-pypi.yml
adapters/mcp/: agentmb_mcp.py
agentmb-operations-skill/: SKILL.md
agentmb-operations-skill/agents/: openai.yaml
agentops/: ARCHITECTURE.md  CONTEXT.md  DECISIONS.md  RULES.md  TASK.md  TMUX.md  TODO.md
agentops/reports/: claude-review.md  codex-review.md  gemini-review.md  linux-baseline.md  r01-b2-gate-summary.md  r01-b3-gate-summary.md  r01-c06-dev-summary.md  r01-claude-dev-summary.md  r01-gate-summary.md  r02-b1-gate-summary.md  r02-b2-gate-summary.md  r02-b3-gate-summary.md  r02-c01-dev-summary.md  r02-c02-dev-summary.md  r02-c03-dev-summary.md  r02-c04-dev-summary.md  r03-b1-gate-summary.md  r03-c01-dev-summary.md  r04-c01-dev-summary.md  r04-c02-dev-summary.md  r05-b1-gate-summary.md  r05-b4-gate-summary.md  r05-c01-dev-summary.md  r05-c02-dev-summary.md  r05-c03-dev-summary.md  r05-c04-dev-summary.md  r05-c06-dev-summary.md  r06-c01-dev-summary.md  r06-c02-dev-summary.md  r06-c03-dev-summary.md  r07-c01-dev-summary.md  r07-c02-dev-summary.md  r07-c02-fix-review-summary.md  r07-c03-dev-summary.md  r07-c04-dev-summary.md  (+11 more)
docs/: linux-headed.md
scripts/: agentops_bootstrap.sh  check-dist-consistency.sh  linux-verify.sh  release.sh  verify.sh  xvfb-headed.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agentmb/: __init__.py  client.py  models.py  recipe.py
sdk/python/openclaw/: __init__.py  client.py  models.py
(+47 files in other folders)
