[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmb"
version = "0.3.1"
description = "Python SDK for agentmb — local Chromium runtime daemon for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["agentmb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
